# gnu_varexp

./: .cvsignore  .gitignore  LICENSE  Makefile  Makefile.am  NEWS  Odinfile  README  TODO  append-to-tokenbuf.c  ascii-to-uint.cc  cfg.mk  command.c  command.cc  command.cpp  configure.ac  cut-out-offset.c  cut-out-offset.cc  cut-out-offset.cpp  error.cc  error.cpp  expand-character-class.c  expand-character-class.cc  expand-character-class.cpp  expand-named-characters.c  expand-variables.cc  expand-variables.hh  expand.c  expand.cc  expand.cpp  expression.c  expression.cc  expression.cpp  free-tokenbuf.c  input.c  input.cc  input.cpp  internal.h  internal.hh  internal.hpp  (+38 more)
doc/: .gitignore  Makefile.am  arrays-of-variables.inc  index.xml  looping.inc  operations-on-variables.inc  user-manual.html  user-manual.xml
docs/: .cvsignore  arrays-of-variables.inc  index.xml  license.inc  looping.inc  operations-on-variables.inc  purpose.inc  quoted-pairs.inc  readme.xml  user-manual.xml  variable-expressions.inc
documentation/: Makefile  arrays-of-variables.inc  ebnf.inc  index.sgml  looping.inc  operations-on-variables.inc  peti.dsl  purpose.inc  quoted-pairs.inc  readme.sgml  user-manual.sgml
regression-tests/: .run-tests  Makefile  Odinfile  empty-search-pattern.c  empty-search-pattern.cc  expand-character-class.c  expand-character-class.cc  expand-named-characters.c  expand1.c  expand1.cc  expand2.c  expand2.cc  expand3.c  expand3.cc  expand4.c  expand4.cc  expand5.c  expand5.cc  expand6.c  expand6.cc  expand7.c  force-expand.c  offset-failure.c  offset-failure.cc  unescape.cc  user-abort.c
tests/: .gitignore  Makefile.am  empty-search-pattern.cpp  expand-character-class.cpp  expand1.cpp  expand2.cpp  expand3.cpp  expand4.cpp  expand5.cpp  expand6.cpp  offset-failure.cpp  unescape.cpp
