LIBS = ../libvarexp.a

TESTS = empty-search-pattern    \
        expand-character-class  \
        expand1                 \
        expand2                 \
        expand3                 \
        expand4                 \
        expand5                 \
        expand6                 \
        offset-failure          \
        unescape

check_PROGRAMS = ${TESTS}

expand1_SOURCES                 = expand1.cc
expand2_SOURCES                 = expand2.cc
expand3_SOURCES                 = expand3.cc
expand4_SOURCES                 = expand4.cc
expand5_SOURCES                 = expand5.cc
expand6_SOURCES                 = expand6.cc
offset_failure_SOURCES          = offset-failure.cc
unescape_SOURCES                = unescape.cc
empty_search_pattern_SOURCES    = empty-search-pattern.cc
expand_character_class_SOURCES  = expand-character-class.cc
