LIBS = ../libvarexp.a

TESTS = empty-search-pattern    \
        expand-character-class  \
        expand1                 \
        expand2                 \
        expand3                 \
        expand4                 \
        expand5                 \
        expand6                 \
        offset-failure          \
        unescape

check_PROGRAMS = ${TESTS}

expand1_SOURCES                 = expand1.cpp
expand2_SOURCES                 = expand2.cpp
expand3_SOURCES                 = expand3.cpp
expand4_SOURCES                 = expand4.cpp
expand5_SOURCES                 = expand5.cpp
expand6_SOURCES                 = expand6.cpp
offset_failure_SOURCES          = offset-failure.cpp
unescape_SOURCES                = unescape.cpp
empty_search_pattern_SOURCES    = empty-search-pattern.cpp
expand_character_class_SOURCES  = expand-character-class.cpp
