# Copyright (c) 2002-2010 Peter Simons <simons@cryp.to>
# Copyright (c) 2001 The OSSP Project (http://www.ossp.org/)
# Copyright (c) 2001 Cable & Wireless Deutschland (http://www.cw.com/de/)
#
# Permission to use, copy, modify, and distribute this software for
# any purpose with or without fee is hereby granted, provided that
# the above copyright notice and this permission notice appear in all
# copies.
#
# THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
# IN NO EVENT SHALL THE AUTHORS AND COPYRIGHT HOLDERS AND THEIR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
# USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
# OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
# SUCH DAMAGE.

LIBS = ../libvarexp.a

TESTS = empty-search-pattern    \
        expand-character-class  \
        expand1                 \
        expand2                 \
        expand3                 \
        expand4                 \
        expand5                 \
        expand6                 \
        offset-failure          \
        unescape

check_PROGRAMS = ${TESTS}

expand1_SOURCES                 = expand1.cpp
expand2_SOURCES                 = expand2.cpp
expand3_SOURCES                 = expand3.cpp
expand4_SOURCES                 = expand4.cpp
expand5_SOURCES                 = expand5.cpp
expand6_SOURCES                 = expand6.cpp
offset_failure_SOURCES          = offset-failure.cpp
unescape_SOURCES                = unescape.cpp
empty_search_pattern_SOURCES    = empty-search-pattern.cpp
expand_character_class_SOURCES  = expand-character-class.cpp
